--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 HELP.md
 target/
 .mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
 
 ### STS ###
 .apt_generated
@@ -32,6 +30,5 @@ build/
 ### VS Code ###
 .vscode/
 
-target/
-*.iml
+### MAC OS ###
 .DS_Store
