feat: add data seeder with dev profile and fix test profile configuration

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,8 @@ server:
 spring:
   application:
     name: secure-rest-api-demo
+  profiles:
+    default: dev
 
   datasource:
     url: jdbc:postgresql://localhost:5432/secure_api
