--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,3 +38,11 @@ management:
   endpoint:
     health:
       show-details: never
+  metrics:
+    tags:
+      application: ${spring.application.name:secure-rest-api-demo}
+    distribution:
+      percentiles-histogram:
+        http.server.requests: true
+      percentiles:
+        http.server.requests: 0.5,0.95,0.99
