feat(metrics): secure Prometheus endpoint with token-based access

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,6 +39,7 @@ management:
     health:
       show-details: never
   metrics:
+    token: ${METRICS_TOKEN}
     tags:
       application: ${spring.application.name:secure-rest-api-demo}
     distribution:
