docs(metrics): document Prometheus setup and add dev run script

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,7 +39,8 @@ management:
     health:
       show-details: never
   metrics:
-    token: ${METRICS_TOKEN}
+    token: ${METRICS_TOKEN:}
+    token-file: ${METRICS_TOKEN_FILE:}
     tags:
       application: ${spring.application.name:secure-rest-api-demo}
     distribution:
