feat(error-handling): add i18n validation messages and improve 400 error responses

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,12 @@ spring:
     name: secure-rest-api-demo
   profiles:
     default: dev
+  messages:
+    basename: messages
+    encoding: UTF-8
+  web:
+    locale: en
+    locale-resolver: fixed
 
   datasource:
     url: jdbc:postgresql://localhost:5432/secure_api
